--- a/style.css
+++ b/style.css
@@ -90,9 +90,11 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 @media (max-width:570px){
 	#primary-menu {
-	    background: #fff;
+	    background: #f5f5f5;
 	    width: 100%;
 	    text-align: center;
+	    margin-top: 10px;
+	    margin-left: -20px;
 	}
 }
 #primary-menu .menu-item {
@@ -107,17 +109,24 @@ Use it to make something cool, have fun, and share what you've learned with othe
     color: #ffc107;
 }
 #primary-menu .menu-item a i {
-    position: absolute;
+    position: relative;
     top: -12px;
-    margin-left: 10px;
+    left: 50%;
     font-size: 20px !important;
 }
 @media(max-width: 570px){
+	#primary-menu .menu-item {
+	    margin: 18px 15px;
+	    padding: 20px;
+	}
 	#primary-menu .menu-item a i {
-	    position: relative;
-	    top: 7px;
-	    margin-left: 0px;
+	    position: absolute;
+	    top: 0;
+	    margin-left: -10px;
 	    padding-right: 10px;
+	}
+	#site-navigation {
+	    float: right !important;
 	}
 }
 #username img {
@@ -130,6 +139,11 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 #username a:hover {
     color: #ffc107;
+}
+@media(max-width: 570px){
+	#username {
+	    margin-top: 10px;
+	}
 }
 
 @media screen and (min-width: 37.5em) {
@@ -151,4 +165,29 @@ Use it to make something cool, have fun, and share what you've learned with othe
 .navigation .nav-links div{
 	text-align: center;
 	padding-top: 20px;
+}
+
+/*Nandan Template styles*/
+.circle {
+    width: 30px !important;
+    height: 30px;
+    border: 6px solid #ffcd39;
+    border-radius: 50%;
+}
+.vline {
+    width: 19px;
+    height: 20px;
+    border-right: 8px solid #ffcd39;
+}
+.hline {
+    width: 50%;
+    height: 20px;
+    border-bottom: 8px solid #ffcd39;
+    transform: translateX(11px);
+    margin-top: -20px !important;
+    position: relative;
+}
+.row.nandan-row:last-child {
+    margin-bottom: 0 !important;
+    padding-bottom: 50px;
 }
