--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
     height: 30px;
     border: 6px solid #ffcd39;
     border-radius: 50%;
+    background-color: #fff;
+}
+.circle-start {
+    margin-bottom: -10px;
 }
 .vline {
     width: 19px;
